--- a/app/views/invitations/_invitation.html.erb
+++ b/app/views/invitations/_invitation.html.erb
@@ -1,3 +1,12 @@
-<%= link_to user_path(invitation.user) do %>
-    <%= image_tag("profile.png") %>
-<% end %>
+<div class="col-lg-6 col-md-6">
+    <div class="panel panel-default">
+        <div class="panel-heading media">
+            <a class="media-left" href="<%= user_path(invitation.user) %>">
+                <%= image_tag("profile.png") %>
+            </a>
+            <div class="media-body  panel-user">
+                <h4><%= link_to invitation.user.username, user_path(invitation.user) %></h4>
+            </div>
+        </div>
+    </div>
+</div>
