several minor fixes

--- a/app/views/event_datas/new.html.erb
+++ b/app/views/event_datas/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="page-header"><%= fa_icon 'bar-chart' %> Enter Event Data</h1>
+<h1 class="page-header"><%= fa_icon 'bar-chart' %> Create Event Data</h1>
 <%= form_for([@event, @event_data], class: "form-group") do |f| %>
     <p>
     <div>
