--- a/app/views/event_datas/_numberfield_form.html.erb
+++ b/app/views/event_datas/_numberfield_form.html.erb
@@ -1,4 +1,4 @@
 <% if @event.event_data.valid_attributes.has_key? attribute_name %>
-    <%= ff.label attribute_name %> (<%= units %>)
+    <%= ff.label attribute_name %> <%= units_label units %>
     <%= ff.number_field attribute_name, class: "form-control" %>
 <% end %>
