--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -118,11 +118,19 @@
     <% if @event.event_data %>
         <%= render 'event_datas/number_attribute_show', attribute_name: :duration, units: 'Minutes' %>
         <%= render 'event_datas/number_attribute_show', attribute_name: :distance, units: 'Meters' %>
+        <%= render 'event_datas/number_attribute_show', attribute_name: :elevation_gain, units: 'Meters' %>
         <%= render 'event_datas/text_attribute_show', attribute_name: :party_1_name %>
         <%= render 'event_datas/text_attribute_show', attribute_name: :party_2_name %>
         <%= render 'event_datas/text_attribute_show', attribute_name: :winner_name %>
+        <%= render 'event_datas/number_attribute_show', attribute_name: :rounds, units: 'Rounds'%>
         <%= render 'event_datas/number_attribute_show', attribute_name: :score_1, units: 'Points' %>
         <%= render 'event_datas/number_attribute_show', attribute_name: :score_2, units: 'Points' %>
+        <%= render 'event_datas/number_attribute_show', attribute_name: :party_1_red_cards, units: 'Cards', ff: f %>
+        <%= render 'event_datas/number_attribute_show', attribute_name: :party_2_red_cards, units: 'Cards', ff: f %>
+        <%= render 'event_datas/number_attribute_show', attribute_name: :party_1_yellow_cards, units: 'Cards', ff: f %>
+        <%= render 'event_datas/number_attribute_show', attribute_name: :party_2_yellow_cards, units: 'Cards', ff: f %>
+        <%= render 'event_datas/number_attribute_show', attribute_name: :party_1_penalties, units: 'Penalties', ff: f %>
+        <%= render 'event_datas/number_attribute_show', attribute_name: :party_2_penalties, units: 'Penalties', ff: f %>
         <% if @event.event_data and @event.event_data.document %>
             <h4>Map</h4>
             <div id="gps" class="map_canvas"></div>
