Added distance visualisation.

--- a/app/views/data_center/show.html.erb
+++ b/app/views/data_center/show.html.erb
@@ -40,7 +40,13 @@
         </div>
     </div>
 </div>
-<div class="col-lg-12">
-
-
-
+    <div class="col-lg-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Your personal distribution of distances by mode of transport
+            </div>
+            <div class="panel-body">
+                <%= pie_chart @user_distance_sport %>
+            </div>
+        </div>
+    </div>
