Added personal distribution of elevation gains.

--- a/app/views/data_center/show.html.erb
+++ b/app/views/data_center/show.html.erb
@@ -60,3 +60,13 @@
         </div>
     </div>
 </div>
+<div class="col-lg-6">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            Your personal distribution of elevation gains by sport
+        </div>
+        <div class="panel-body">
+            <%= pie_chart @user_elevation_gain_sport %>
+        </div>
+    </div>
+</div>
