Added total distribution of elevatoin gains by sport and fixed a little bug.

--- a/app/views/data_center/show.html.erb
+++ b/app/views/data_center/show.html.erb
@@ -70,3 +70,13 @@
         </div>
     </div>
 </div>
+<div class="col-lg-6">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            Total distribution of elevation gains by sport
+        </div>
+        <div class="panel-body">
+            <%= pie_chart @total_elevation_gain_sport %>
+        </div>
+    </div>
+</div>
