First batch of improvements for #37

--- a/app/views/event_datas/_text_attribute_show.html.erb
+++ b/app/views/event_datas/_text_attribute_show.html.erb
@@ -1,8 +1,10 @@
 <% if  @event.event_data.valid_attributes.has_key? attribute_name %>
     <% if not @event.event_data.valid_attributes[attribute_name].nil? %>
         <p>
+        <div>
             <%= attribute_label attribute_name %>:
             <%= @event.event_data.valid_attributes[attribute_name] %>
+        </div>
         </p>
     <% end %>
 <% end %>
