--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -24,7 +24,8 @@
         <div><%= f.label :description %>
             <%= f.text_area :description, size: '60x5', class: "form-control" %>
         </div>
-    </p>    <p>
+    </p>
+    <p>
     <div><%= f.label :location %><br />
         <%= f.text_field :location, id: "geocomplete", placeholder: "Enter a Location", class: "form-control" %>
     </div>
@@ -83,4 +84,4 @@
             return false;
         });
     });
-</script><
+</script>
