--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -81,7 +81,11 @@
 
     <h3><%= fa_icon 'users fw' %> Participants</h3>
     <% if @event.participants.empty? %>
-        <p>Nobody wants to participate <%= fa_icon 'frown-o' %></p>
+        <% if @event.is_passed? %>
+            <p>Nobody participated <%= fa_icon 'frown-o' %></p>
+        <% else %>
+            <p>Nobody wants to participate <%= fa_icon 'frown-o' %></p>
+        <% end %>
     <% else %>
         <div class="row">
             <%= render @event.participants %>
@@ -95,9 +99,7 @@
         <%= render @event.invitations %>
     </div>
     <% if @event.belongs_to?(current_user) %>
-        <%= link_to new_event_invitation_path(@event) do %>
-            <%= image_tag("plus.png") %>
-        <% end %>
+        <%= button_to "Invite someone", new_event_invitation_path(@event), :method => "get", class: "btn btn-success" %>
     <% end %>
 
     <hr>
@@ -147,10 +149,10 @@
             <div style="float: left; width: auto;">
                 <%= link_to "Delete Event Data", event_event_data_path(@event, @event.event_data), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %>
             </div>
+            <br>
+            <br>
         <% end %>
     <% end %>
-    <br/>
-    <br/>
     <hr>
 <% end %>
 
