--- a/app/assets/stylesheets/half-slider.css
+++ b/app/assets/stylesheets/half-slider.css
@@ -37,3 +37,23 @@ body {
 footer {
     margin: 50px 0;
 }
+
+.carousel1 {
+    background-image:url("running_slide.jpg");
+}
+
+.carousel2 {
+    background-image:url("cycling_slide.jpg");
+}
+
+.carousel3 {
+    background-image:url("soccer_slide.jpg");
+}
+
+.carousel4 {
+    background-image:url("boxing_slide.jpg");
+}
+
+.carousel-caption h2{
+    color: #fff;
+}
