--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,29 +15,37 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
 
     <!-- Wrapper for Slides -->
     <div class="carousel-inner">
         <div class="item active">
             <!-- Set the first background image using inline CSS below. -->
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
+            <div class="fill carousel1"></div>
             <div class="carousel-caption">
-                <h2>The Sports Doodle!</h2>
+                <h2>Introducing SPOODLE!</h2>
             </div>
         </div>
         <div class="item">
             <!-- Set the second background image using inline CSS below. -->
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
+            <div class="fill carousel2"></div>
             <div class="carousel-caption">
-                <h2>Create Events that suit everyone!</h2>
+                <h2>The Sports Doodle.</h2>
             </div>
         </div>
         <div class="item">
             <!-- Set the third background image using inline CSS below. -->
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+            <div class="fill carousel3"></div>
             <div class="carousel-caption">
-                <h2>Exercise and compete with all your Friends! </h2>
+                <h2>Create events to exercise with friends.</h2>
+            </div>
+        </div>
+        <div class="item">
+            <!-- Set the third background image using inline CSS below. -->
+            <div class="fill carousel4"></div>
+            <div class="carousel-caption">
+                <h2>Automatically find the most convenient date for everyone.</h2>
             </div>
         </div>
     </div>
