--- a/app/assets/stylesheets/half-slider.css
+++ b/app/assets/stylesheets/half-slider.css
@@ -14,6 +14,7 @@ body {
 .carousel {
     height: 50%;
     margin-top: -2px;
+    margin-bottom: 20px;
 }
 
 .item,
@@ -21,8 +22,6 @@ body {
 .carousel-inner {
     height: 100%;
 }
-
-/* Background images are set within the HTML using inline CSS, not here */
 
 .fill {
     width: 100%;
@@ -34,16 +33,12 @@ body {
     -o-background-size: cover;
 }
 
-footer {
-    margin: 50px 0;
-}
-
 .carousel1 {
-    background-image:url("running_slide.jpg");
+    background-image:url("cycling_slide.jpg");
 }
 
 .carousel2 {
-    background-image:url("cycling_slide.jpg");
+    background-image:url("running_slide.jpg");
 }
 
 .carousel3 {
