--- a/app/views/layouts/guest.html.erb
+++ b/app/views/layouts/guest.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Spoodle</title>
+    <title>SPOODLE</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= favicon_link_tag %>
@@ -32,17 +32,6 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><%= link_to "Register", new_user_registration_path %></li>
                     <li><%= link_to "Login", new_user_session_path %></li>
@@ -67,7 +56,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <hr>
-                    <p>Copyright &copy; Spoodle Inc. 2014. Visit us on <a href="https://github.com/ASE-2014"><%= fa_icon 'github' %> GitHub</a>!</p>
+                    <p>Copyright &copy; spoodleASE Inc. 2014. Visit us on <a href="https://github.com/ASE-2014"><%= fa_icon 'github' %> GitHub</a>!</p>
                 </div>
             </div>
             <!-- /.row -->
