--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -78,15 +78,18 @@
                         <li>Create events to exercise with friends.</li>
                         <li>Share the events on social networks.</li>
                         <li>Suggest multiple possible dates for an event.</li>
-                        <li>Let invited users assign a value based on their availability per suggested date.</li>
+                        <li>Invited users can assign a value based on their availability per suggested date.</li>
                         <li>Automatically find the most convenient date for everyone.</li>
+                        <li>Export upcoming events to a calendar application.</li>
                         <li>Add data like duration or distance to passed events.</li>
+                        <li>Add data like a map, duration or distance to passed events.</li>
                         <li>View aggregated statistics about the events you took part at.</li>
+                        <li>Completely responsive design for all platforms.</li>
                     </ul>
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <h3>Share</h3>
-                    <p>Make SPOODLE even more interesting by spreading the word on social media platforms of your choice! More users means more trips to explore! <%= fa_icon 'smile-o' %></p>
+                    <p>Make SPOODLE even more interesting by spreading the word on social media platforms of your choice! More users means more events to take part! <%= fa_icon 'smile-o' %></p>
                     <div class="social-likes">
                         <div class="facebook" title="Share link on Facebook">Facebook</div>
                         <div class="twitter" title="Share link on Twitter">Twitter</div>
