Readded Twitter, improved social media stuff.

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -56,10 +56,9 @@
     <p><%= @event.description %></p>
 
     <div class="social-likes">
-        <div class="facebook" title="Share link on Facebook">Facebook</div>
-        <div class="twitter" title="Share link on Twitter">Twitter</div>
-        <div class="plusone" title="Share link on Google+">Google+</div>
-        <div class="pinterest" title="Share image on Pinterest" data-media="">Pinterest</div>
+        <div class="facebook" title="Share link on Facebook" data-title="Check out this SPOODLE event: ">Facebook</div>
+        <div class="twitter" title="Share link on Twitter" data-title="Check out this #spoodleASE event: ">Twitter</div>
+        <div class="plusone" title="Share link on Google+" data-title="Check out this SPOODLE event: ">Google+</div>
     </div>
 
 </div>
