--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -74,7 +74,7 @@
                 <div class="col-lg-6 col-md-6">
                     <h3>Features</h3>
                     <ul>
-                        <li>Register an account or sign up with facebook.</li>
+                        <li>Register an account or sign up with Facebook.</li>
                         <li>Create events to exercise with friends.</li>
                         <li>Share the events on social networks.</li>
                         <li>Suggest multiple possible dates for an event.</li>
@@ -88,22 +88,30 @@
                     </ul>
                 </div>
                 <div class="col-lg-6 col-md-6">
+                    <h3>Getting started</h3>
+                    <p><a href="<%= new_user_registration_path %>">Sign up</a> right now to immediately start creating your own events and get invited to other user's events!</p>
                     <h3>Share</h3>
                     <p>Make SPOODLE even more interesting by spreading the word on social media platforms of your choice! More users means more events to take part! <%= fa_icon 'smile-o' %></p>
                     <div class="social-likes">
-                        <div class="facebook" title="Share link on Facebook">Facebook</div>
-                        <div class="twitter" title="Share link on Twitter">Twitter</div>
-                        <div class="plusone" title="Share link on Google+">Google+</div>
+                        <div class="facebook" title="Share link on Facebook" data-title="SPOODLE, the sports doodle. Check it out:">Facebook</div>
+                        <div class="twitter" title="Share link on Twitter" data-title="SPOODLE, the sports doodle. #spoodleASE. Check it out:">Twitter</div>
+                        <div class="plusone" title="Share link on Google+" data-title="SPOODLE, the sports doodle. Check it out:">Google+</div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <h3>Getting started</h3>
-                    <p><a href="<%= new_user_registration_path %>">Sign up</a> right now to immediately start creating your own events and get invited to other user's events!</p>
+                <div class="col-lg-6 col-md-6">
                     <h3>About</h3>
-                    <p>This web application was developed as a project for the <a href="http://mcs.unibnf.ch/program/courses-timetable/courses/advanced-software-engineering">Advanced Software Engineering course</a> at the University of Fribourg.<br>
+                    <p>This web application was developed as a project for the <a href="http://mcs.unibnf.ch/program/courses-timetable/courses/advanced-software-engineering">Advanced Software Engineering course</a> at the University of Fribourg. <br>
                         The lecture is part of the Swiss Joint Master of Science in Computer Science <a href="http://mcs.unibnf.ch/">(SJMCS)</a> program.</p>
+                        <p>The open source of this application can be found on <a href="https://github.com/ASE-2014/spoodle">GitHub</a>.</p>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                    <h3>Latest mentions on Twitter</h3>
+                    <div class="tweets">
+                        <%= render partial: "tweet", collection: @tweets %>
+                    </div>
+                    <p><a href="https://twitter.com/search?q=spoodleASE">more Tweets</a></p>
                 </div>
             </div>
 
