Small adjustment to prompts before deleting stuff.

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -161,7 +161,7 @@
     </div>
     <div style="float: left; width: auto;"><p>&nbsp;</p></div>
     <div style="float: left; width: auto;">
-        <%= button_to 'Delete Event', event_path(@event), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %>
+        <%= button_to 'Delete Event', event_path(@event), method: :delete,  data: { confirm: 'Are you sure?' }, data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %>
     </div>
     <br/>
     <br/>
