--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
     <%= button_to "Add friend", friendships_path(friend_id: @user), method: :post, class: "btn btn-sm btn-success pull-right" %>
 <% end %>
 <% if add_unfriend_button? @user %>
-    <%= button_to "Unfriend", friendship_of(current_user, @user), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-primary pull-right" %>
+    <%= button_to "Unfriend", friendship_of(current_user, @user), method: :delete, class: "btn btn-sm btn-primary pull-right" %>
 <% end %>
 <h2>About</h2>
 <table>
